@@ -20,7 +20,7 @@ import org.spongepowered.asm.mixin.injection.ModifyConstant;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 import pigcart.particlerain.particle.WeatherParticle;
 
-import java.util.List;
+import java.util.Collections;
 
 @Mixin(value = WeatherParticle.class)
 public abstract class MixinWeatherParticle extends TextureSheetParticle implements WeatherParticleAddon {
@@ -99,7 +99,7 @@ public abstract class MixinWeatherParticle extends TextureSheetParticle implemen
 				apply,
 				getBoundingBox(),
 				this.level,
-				List.of());
+				Collections.emptyList());
 			d = motion.x;
 			e = motion.y;
 			f = motion.z;
